tests/paczka1/fuzzy1/89516011.err
Error in line 4: 1yyUQ S769 54,9
Error in line 7: b2bmY2MzEtn A91j 58,5
Error in line 12: LHZWA5ZUcaL A913 98,2
Error in line 19: S286 A913 25,5
Error in line 24: b2bmY2MzEtn A913 115,4
Error in line 38: 1yyUQ A332 97,2
